[package]
name = "flowchart_gen"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
clang = "2.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lints.clippy]
match_wildcard_for_single_variants = "allow"
used_underscore_binding = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "warn"
if_not_else = "allow"
match_bool = "allow"
pedantic = "warn"
all = "warn"
